Mejoras en el slider

--- a/index.html
+++ b/index.html
@@ -240,35 +240,32 @@
                             data-blendmode="hard-light"
                             style="z-index: 5;font-family:Open Sans;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
                         </div>
-                        <div class="tp-caption"
-                            id="slide-240-layer-10"
+                        <div class="tp-caption tp-resizeme" 
+                            id="slide-1-layer-15" 
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['40','40','30','25']"
-                            data-y="['middle','middle','middle','middle']" 
-                            data-voffset="['-103','-102','-123','-152']"
-                            data-fontsize="['80','70','60','50']"
-                            data-lineheight="['80','70','60','50']"
+                            data-hoffset="['18','18','18','18']" 
+                            data-y="['top','top','top','top']" 
+                            data-voffset="['270','270','270','270']" 
                             data-width="none"
                             data-height="none"
                             data-whitespace="nowrap"
-                            data-type="text"
-                            data-responsive_offset="off"
-                            data-responsive="off"
+                            data-type="image" 
+                            data-responsive_offset="on" 
                             data-frames='[{"delay":490,"speed":1500,"frame":"0","from":"x:[175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[-100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
                             data-textAlign="['inherit','inherit','inherit','inherit']"
                             data-paddingtop="[0,0,0,0]"
                             data-paddingright="[0,0,0,0]"
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
-                            style="z-index: 6; white-space: nowrap; font-size: 80px; line-height: 80px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Open Sans;">
-                            <i class="icon-plus"></i> 
+                            style="z-index: 8;">
+                            <img src="images/logos/logomini.png" alt="" data-ww="['130px','130px','130px','130px']" data-hh="['130px','130px','130px','130px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-1"
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['120','120','100','80']"
+                            data-hoffset="['139','120','100','80']"
                             data-y="['middle','middle','middle','middle']" 
-                            data-voffset="['-100','-100','-120','-150']"
+                            data-voffset="['-98','-100','-120','-150']"
                             data-fontsize="['90','80','70','60']"
                             data-lineheight="['90','80','70','60']"
                             data-fontweight="['900','600','600','600']"
@@ -311,29 +308,51 @@
                             style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Open Sans;">
                             Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful! 
                         </div>
-                        <!-- <button class="tp-caption tc-btnshadow tp-rs-menulink btn-verde button button-3d button-xlarge button-rounded"
-                            href=""
-                            id="slide-240-layer-12"
+                        <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
+                            target="_self"			 
+                            id="slide-1-layer-12" 
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['120','120','100','80']"
+                            data-hoffset="['120','120','100','80']" 
                             data-y="['middle','middle','middle','middle']" 
-                            data-voffset="['150','140','90','20']"
-                            data-width="none"
-                            data-height="none"
+                            data-voffset="['150','140','90','20']" 
+						    data-width="none"
+			                data-height="none"
                             data-whitespace="nowrap"
-                            data-type="button"
-                            data-actions='[{"event":"click", "action":"scrollbelow", "offset":"1150px"}]'
-                            data-responsive_offset="off"
+                            data-type="button" 
+                            data-actions='[{"event":"click","action":"scrollbelow","offset":"5000px","delay":"","speed":"2000","ease":"Power1.easeInOut"}]'
+                            data-responsive_offset="off" 
                             data-responsive="off"
                             data-frames='[{"delay":1000,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255,255,255,1);bg:rgb(41,194,146);"}]'
                             data-textAlign="['inherit','inherit','inherit','inherit']"
-                            data-paddingtop="[0,0,0,0]"
-                            data-paddingright="[20,20,20,20]"
-                            data-paddingbottom="[0,0,0,0]"
-                            data-paddingleft="[20,20,20,20]"
-                            style="z-index: 9;">
-                            Nuestros servicios
-                        </button> -->
+                            style="z-index: 10; white-space: nowrap; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255,255,255,1); font-family:Open Sans;background-color:rgb(46,216,163);border-radius:3px 3px 3px 3px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">
+                            <i class="icon-line-arrow-right"></i>
+                            <span>Contáctanos</span>
+                        </div>
+                        <div class="tp-caption tp-svg-layer" 
+			                id="slide-1-layer-4" 
+                            data-x="['center','center','right','right']" 
+                            data-hoffset="['0','0','40','30']" 
+                            data-y="['bottom','bottom','bottom','bottom']" 
+                            data-voffset="['40','40','30','30']" 
+                            data-width="50"
+                            data-height="50"
+                            data-whitespace="nowrap"
+                            data-type="svg" 
+                            data-actions='[{"event":"click","action":"scrollbelow","offset":"-50","delay":"","speed":"1000","ease":"Power1.easeInOut"}]'
+                            data-svg_src="rs-plugin/images/ic_keyboard_arrow_down_24px.svg" 
+                            data-svg_idle="sc:transparent;sw:0;sda:0;sdo:0;" 
+                            data-svg_hover="sc:transparent;sw:0;sda:0;sdo:0;" 
+                            data-basealign="slide" 
+                            data-responsive_offset="off" 
+                            data-responsive="off"
+                            data-frames='[{"delay":1500,"speed":1000,"frame":"0","from":"y:bottom;","to":"o:1;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(46,216,163);bc:rgb(46,216,163);"}]'
+                            data-textAlign="['center','center','center','center']"
+                            data-paddingtop="[7,7,7,7]"
+                            data-paddingright="[5,5,5,5]"
+                            data-paddingbottom="[5,5,5,5]"
+                            data-paddingleft="[5,5,5,5]"
+                            style="z-index: 11; min-width: 50px; max-width: 50px; max-width: 50px; max-width: 50px; color: #ffffff;font-family:Open Sans;border-color:rgb(255,255,255);border-style:solid;border-width:2px 2px 2px 2px;border-radius:40px 40px 40px 40px;cursor:pointer;">
+                        </div>
                     </li>
                 </ul>
                 <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
@@ -360,7 +379,7 @@
                 <div class="row clearfix">
                     <div class="col-lg-5">
                         <div class="heading-block topmargin">
-                            <h2 class="texto-verde"> <b>Encontrar tu</b> <strong>identidad Digital</strong>, nunca fue tan fácil.</h2>
+                            <h2 class="texto-verde"><b>Encontrar tu</b> <strong>identidad Digital</strong>, nunca fue tan fácil.</h2>
                         </div>
                         <p class="lead">Create a website that you are gonna be proud of. Be it Business, Portfolio, Agency, Photography, eCommerce &amp; much more.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="nosotros.html">
