--- a/marketing.html
+++ b/marketing.html
@@ -203,20 +203,20 @@
 			<div id="welcome" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5.2">
                 <ul>
                     <li data-index="rs-240" data-transition="fade" data-slotamount="default" data-hideafterloop="0" data-hideslideonmobile="off"  data-easein="Power4.easeInOut" data-easeout="Power4.easeInOut" data-masterspeed="1000"  data-rotate="0"  data-saveperformance="off"  data-title="Slide" data-param1="" data-param2="" data-param3="" data-param4="" data-param5="" data-param6="" data-param7="" data-param8="" data-param9="" data-param10="" data-description="">
-                        <img src="rs-plugin/images/web2.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
-                        <!-- <div class="rs-background-video-layer"
+                        <img src="rs-plugin/images/hello-world.jpg"  alt=""  data-bgposition="center center" data-bgfit="cover" data-bgparallax="4" class="rev-slidebg" data-no-retina>
+                        <div class="rs-background-video-layer"
                             data-forcerewind="on"
                             data-volume="mute"
                             data-videowidth="100%"
                             data-videoheight="100%"
-                            data-videomp4="rs-plugin/images/explore.mp4"
+                            data-videomp4="rs-plugin/images/hello-world.mp4"
                             data-videopreload="auto"
                             data-videoloop="loop"
                             data-forceCover="1"
                             data-aspectratio="16:9"
                             data-autoplay="true"
                             data-autoplayonlyfirsttime="false">
-                        </div> -->
+                        </div>
                         <div class="tp-caption tp-shape tp-shapewrapper"
                             id="slide-240-layer-7"
                             data-x="['center','center','center','center']" 
@@ -239,38 +239,35 @@
                             data-blendmode="hard-light"
                             style="z-index: 5;font-family:Open Sans;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
                         </div>
-                        <div class="tp-caption"
-                            id="slide-240-layer-10"
+                        <div class="tp-caption tp-resizeme" 
+                            id="slide-1-layer-15" 
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['40','40','30','25']"
-                            data-y="['middle','middle','middle','middle']" 
-                            data-voffset="['-103','-102','-123','-152']"
-                            data-fontsize="['80','70','60','50']"
-                            data-lineheight="['80','70','60','50']"
+                            data-hoffset="['18','18','18','18']" 
+                            data-y="['top','top','top','top']" 
+                            data-voffset="['270','270','270','270']" 
                             data-width="none"
                             data-height="none"
                             data-whitespace="nowrap"
-                            data-type="text"
-                            data-responsive_offset="off"
-                            data-responsive="off"
+                            data-type="image" 
+                            data-responsive_offset="on" 
                             data-frames='[{"delay":490,"speed":1500,"frame":"0","from":"x:[175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[-100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]'
                             data-textAlign="['inherit','inherit','inherit','inherit']"
                             data-paddingtop="[0,0,0,0]"
                             data-paddingright="[0,0,0,0]"
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
-                            style="z-index: 6; white-space: nowrap; font-size: 80px; line-height: 80px; font-weight: 400; color: #ffffff; letter-spacing: 0px;font-family:Open Sans;">
-                            <i class="icon-plus"></i> 
+                            style="z-index: 8;">
+                            <img src="images/logos/logomini.png" alt="" data-ww="['130px','130px','130px','130px']" data-hh="['130px','130px','130px','130px']" data-no-retina>
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-1"
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['120','120','100','80']"
+                            data-hoffset="['139','120','100','80']"
                             data-y="['middle','middle','middle','middle']" 
-                            data-voffset="['-100','-100','-120','-150']"
+                            data-voffset="['-90','-100','-120','-150']"
                             data-fontsize="['90','80','70','60']"
                             data-lineheight="['90','80','70','60']"
-                            data-fontweight="['400','400','400','400']"
+                            data-fontweight="['600','600','600','600']"
                             data-letterspacing="['-5','-5','-5','-3']"
                             data-width="['none','none','320','260']"
                             data-height="110"
@@ -285,7 +282,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 7; min-width: 260px; max-width: 260px; font-size: 90px; line-height: 90px; font-weight: 900; color: rgba(255,255,255,1); letter-spacing: -5px;font-family:Open Sans;">
-                            <span style="font-weight:600;">Marketing</span> Digital 
+                            <span style="font-weight:400;">Marketing</span> Digital 
                         </div>
                         <div class="tp-caption"
                             id="slide-240-layer-2"
@@ -309,6 +306,51 @@
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Open Sans;">
                             Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful! 
+                        </div>
+                        <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
+                            target="_self"			 
+                            id="slide-1-layer-12" 
+                            data-x="['left','left','left','left']" 
+                            data-hoffset="['120','120','100','80']" 
+                            data-y="['middle','middle','middle','middle']" 
+                            data-voffset="['150','140','90','20']" 
+						    data-width="none"
+			                data-height="none"
+                            data-whitespace="nowrap"
+                            data-type="button" 
+                            data-actions='[{"event":"click","action":"scrollbelow","offset":"5000px","delay":"","speed":"2000","ease":"Power1.easeInOut"}]'
+                            data-responsive_offset="off" 
+                            data-responsive="off"
+                            data-frames='[{"delay":1000,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255,255,255,1);bg:rgb(41,194,146);"}]'
+                            data-textAlign="['inherit','inherit','inherit','inherit']"
+                            style="z-index: 10; white-space: nowrap; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255,255,255,1); font-family:Open Sans;background-color:rgb(46,216,163);border-radius:3px 3px 3px 3px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">
+                            <i class="icon-line-arrow-right"></i>
+                            <span>Contáctanos</span>
+                        </div>
+                        <div class="tp-caption tp-svg-layer" 
+			                id="slide-1-layer-4" 
+                            data-x="['center','center','right','right']" 
+                            data-hoffset="['0','0','40','30']" 
+                            data-y="['bottom','bottom','bottom','bottom']" 
+                            data-voffset="['40','40','30','30']" 
+                            data-width="50"
+                            data-height="50"
+                            data-whitespace="nowrap"
+                            data-type="svg" 
+                            data-actions='[{"event":"click","action":"scrollbelow","offset":"-50","delay":"","speed":"1000","ease":"Power1.easeInOut"}]'
+                            data-svg_src="rs-plugin/images/ic_keyboard_arrow_down_24px.svg" 
+                            data-svg_idle="sc:transparent;sw:0;sda:0;sdo:0;" 
+                            data-svg_hover="sc:transparent;sw:0;sda:0;sdo:0;" 
+                            data-basealign="slide" 
+                            data-responsive_offset="off" 
+                            data-responsive="off"
+                            data-frames='[{"delay":1500,"speed":1000,"frame":"0","from":"y:bottom;","to":"o:1;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(46,216,163);bc:rgb(46,216,163);"}]'
+                            data-textAlign="['center','center','center','center']"
+                            data-paddingtop="[7,7,7,7]"
+                            data-paddingright="[5,5,5,5]"
+                            data-paddingbottom="[5,5,5,5]"
+                            data-paddingleft="[5,5,5,5]"
+                            style="z-index: 11; min-width: 50px; max-width: 50px; max-width: 50px; max-width: 50px; color: #ffffff;font-family:Open Sans;border-color:rgb(255,255,255);border-style:solid;border-width:2px 2px 2px 2px;border-radius:40px 40px 40px 40px;cursor:pointer;">
                         </div>
                     </li>
                 </ul>
