--- a/diseno-web.html
+++ b/diseno-web.html
@@ -384,7 +384,7 @@
                             <div class="fbox-icon">
                                 <a href="#"><i class="icon-play"></i></a>
                             </div>
-                            <h3>HTML5 Video</h3>
+                            <h3 class="texto-azul">HTML5 Video</h3>
                             <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
                     </div>
@@ -393,7 +393,7 @@
                             <div class="fbox-icon">
                                 <a href="#"><i class="icon-play"></i></a>
                             </div>
-                            <h3>HTML5 Video</h3>
+                            <h3 class="texto-azul">HTML5 Video</h3>
                             <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
                     </div>
@@ -402,7 +402,7 @@
                             <div class="fbox-icon">
                                 <a href="#"><i class="icon-play"></i></a>
                             </div>
-                            <h3>HTML5 Video</h3>
+                            <h3 class="texto-azul">HTML5 Video</h3>
                             <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
                     </div>
@@ -413,7 +413,7 @@
                             <div class="fbox-icon">
                                 <a href="#"><i class="icon-play"></i></a>
                             </div>
-                            <h3>HTML5 Video</h3>
+                            <h3 class="texto-azul">HTML5 Video</h3>
                             <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
                     </div>
@@ -422,7 +422,7 @@
                             <div class="fbox-icon">
                                 <a href="#"><i class="icon-play"></i></a>
                             </div>
-                            <h3>HTML5 Video</h3>
+                            <h3 class="texto-azul">HTML5 Video</h3>
                             <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
                     </div>
@@ -431,7 +431,7 @@
                             <div class="fbox-icon">
                                 <a href="#"><i class="icon-play"></i></a>
                             </div>
-                            <h3>HTML5 Video</h3>
+                            <h3 class="texto-azul">HTML5 Video</h3>
                             <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
                     </div>
