--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
                         <div class="tp-caption tp-resizeme" 
                             id="slide-1-layer-15" 
                             data-x="['left','left','left','left']" 
-                            data-hoffset="['18','18','18','18']" 
+                            data-hoffset="['-60','-60','-60','-60']" 
                             data-y="['top','top','top','top']" 
-                            data-voffset="['270','270','270','270']" 
+                            data-voffset="['220','220','220','220']" 
                             data-width="none"
                             data-height="none"
                             data-whitespace="nowrap"
@@ -258,9 +258,9 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8;">
-                            <img src="images/logos/logomini.png" alt="" data-ww="['130px','130px','130px','130px']" data-hh="['130px','130px','130px','130px']" data-no-retina>
+                            <img src="images/logos/logoblanco.png" alt="" data-ww="['800px','800px','800px','800px']" data-hh="['300px','300px','300px','300px']" data-no-retina>
                         </div>
-                        <div class="tp-caption"
+                        <!-- <div class="tp-caption"
                             id="slide-240-layer-1"
                             data-x="['left','left','left','left']" 
                             data-hoffset="['139','120','100','80']"
@@ -283,8 +283,8 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 7; min-width: 260px; max-width: 260px; white-space: normal; font-size: 90px; line-height: 90px; font-weight: 900; color: rgba(255,255,255,1); letter-spacing: -5px;font-family:Open Sans;">
-                            <span style="font-weight:400;">Creativos</span>Plus 
-                        </div>
+                            <span style="font-weight:400;">Creativos</span>Plus
+                        </div> -->
                         <div class="tp-caption"
                             id="slide-240-layer-2"
                             data-x="['left','left','left','left']" 
@@ -306,7 +306,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Open Sans;">
-                            Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful! 
+                            Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful!
                         </div>
                         <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
                             target="_self"			 
