--- a/trabajos.html
+++ b/trabajos.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/swiper.css" type="text/css">
-    
     <link rel="stylesheet" href="css/responsive.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="css/colors.css" type="text/css">
@@ -25,7 +24,7 @@
     <link rel="stylesheet" href="rs-plugin/css/typewriter.css">
 
     <link rel="icon" type="image/png" href="images/logos/icono.png">
-    <title>CreativosPlus | Agencia Digital </title>
+    <title>CreativosPlus | Nuestros Trabajos </title>
 
     <meta property="og:type" content="website"/>
     <meta property="og:description" content=""/>
@@ -374,6 +373,78 @@
             </a>
         </div>
     </section>
+    <div id="trabajos" class="section nomargin noborder" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
+        <div class="container-fluid">
+            <div class="heading-block center">
+                <h2 class="texto-verde"><strong>Últimos trabajos web</strong>, conoce la calidad de ellos.</h2>
+            </div>
+            <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
+                <div class="slide slide--1">
+                    <div class="carousel-column-container">
+                        <ul class="carousel-column column-1">
+                            <li class="carousel-grid-item">
+                                <a href="" class="item" style="background-image: url('images/gallery/1.jpg');"></a>
+                            </li>
+                            <li class="carousel-grid-item">
+                                <a href="" class="item" style="background-image: url('images/gallery/2.jpg');"></a>
+                            </li>
+                        </ul>
+                        <ul class="carousel-column column-2">
+                            <li class="carousel-grid-item">
+                                <a href="" class="item" style="background-image: url('images/gallery/3.jpg'); min-height: 300px"></a>
+                            </li>
+                            <li class="carousel-grid-item">
+                                <a href="" class="item" style="background-image: url('images/gallery/4.jpg'); min-height: 280px"></a>
+                            </li>
+                            <li class="carousel-grid-item">
+                                <a href="" class="item" style="background-image: url('images/gallery/5.jpg'); min-height: 200px"></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="slide slide--2">
+                    <div class="carousel-column-container">
+                        <ul class="carousel-column column-1">
+                            <li class="carousel-grid-item">
+                                <div class="item bgcolor d-flex align-items-center px-4" style="min-height: 480px">
+                                    <blockquote class="blockquote border-0 mb-0">
+                                        <p class="mb-3 text-white">"The Spirit of CoWorking Allows You to Find CoWorkers Who're Worth Working with."</p>
+                                        <footer class="blockquote-footer text-white-50 font-italic">Cynthia Chiam</footer>
+                                    </blockquote>
+                                </div>
+                            </li>
+                            <li class="carousel-grid-item">
+                                <a href="" class="item" style="background-image: url('images/gallery/6.jpg'); min-height: 324px"></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="heading-block center mt-3">
+            <h2 class="texto-verde"><strong>Últimos trabajos web</strong>, conoce la calidad de ellos.</h2>
+    </div>
+    <div class="masonry-thumbs grid-4 clearfix mb-5">
+        <a href="images/gallery/10.jpg" data-lightbox="image">
+            <img src="images/gallery/10.jpg" alt="Single Image">
+            <div class="overlay"><div class="overlay-wrap"><i class="icon-line-plus"></i></div></div>
+        </a>
+        <a href="images/gallery/10.jpg" data-lightbox="image">
+            <img src="images/gallery/10.jpg" alt="Single Image">
+            <div class="overlay"><div class="overlay-wrap"><i class="icon-line-plus"></i></div></div>
+        </a>
+        <a href="images/gallery/10.jpg" data-lightbox="image">
+            <img src="images/gallery/10.jpg" alt="Single Image">
+            <div class="overlay"><div class="overlay-wrap"><i class="icon-line-plus"></i></div></div>
+        </a>
+        <a href="images/gallery/10.jpg" data-lightbox="image">
+            <img src="images/gallery/10.jpg" alt="Single Image">
+            <div class="overlay"><div class="overlay-wrap"><i class="icon-line-plus"></i></div></div>
+        </a>
+    </div>
+
+    
     <footer id="footer" class="bg-azul">
         <div class="container">
             <div class="footer-widgets-wrap clearfix">
