--- a/diseno-web.html
+++ b/diseno-web.html
@@ -378,65 +378,47 @@
                 <div class="heading-block center">
                     <h2 class="texto-verde">Tenemos todo tipo de <strong>servicios</strong> para ti.</h2>
                 </div>
-                <div class="row topmargin">
-                    <div class="col-lg-4">
-                        <div class="feature-box fbox-plain">
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="feature-box fbox-large fbox-effect">
                             <div class="fbox-icon">
-                                <a href="#"><i class="icon-play"></i></a>
+                                <i class="icon-desktop1 i-alt"></i>
                             </div>
-                            <h3 class="texto-azul">HTML5 Video</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                            <h3 class="texto-verde">Diseño Web</h3>
+                            <p>Powerful Layout with Responsive functionality that can be adapted to any screen size. Resize browser to view.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="feature-box fbox-plain">
+                    <div class="col-lg-6">
+                        <div class="feature-box fbox-large fbox-effect">
                             <div class="fbox-icon">
-                                <a href="#"><i class="icon-play"></i></a>
+                                <i class="icon-city i-alt"></i>
                             </div>
-                            <h3 class="texto-azul">HTML5 Video</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <a href="#"><i class="icon-play"></i></a>
-                            </div>
-                            <h3 class="texto-azul">HTML5 Video</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                            <h3 class="texto-verde">Diseño Web para Empresas</h3>
+                            <p>Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Retina Icons, Fonts &amp; all others graphics are optimized.</p>
                         </div>
                     </div>
                 </div>
-                <div class="row my-5">
-                    <div class="col-lg-4">
-                        <div class="feature-box fbox-plain">
+                <div class="row" style="margin-top: 80px;">
+                    <div class="col-lg-6">
+                        <div class="feature-box fbox-large fbox-effect">
                             <div class="fbox-icon">
-                                <a href="#"><i class="icon-play"></i></a>
+                                <i class="icon-shopping-cart i-alt"></i>
                             </div>
-                            <h3 class="texto-azul">HTML5 Video</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                            <h3 class="texto-verde">Tiendas Virtuales</h3>
+                            <p>Powerful Layout with Responsive functionality that can be adapted to any screen size. Resize browser to view.</p>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="feature-box fbox-plain">
+                    <div class="col-lg-6">
+                        <div class="feature-box fbox-large fbox-effect">
                             <div class="fbox-icon">
-                                <a href="#"><i class="icon-play"></i></a>
+                                <i class="icon-pen-fancy i-alt"></i>
                             </div>
-                            <h3 class="texto-azul">HTML5 Video</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="feature-box fbox-plain">
-                            <div class="fbox-icon">
-                                <a href="#"><i class="icon-play"></i></a>
-                            </div>
-                            <h3 class="texto-azul">HTML5 Video</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                            <h3 class="texto-verde">Rediseño Web</h3>
+                            <p>Canvas includes tons of optimized code that are completely customizable and deliver unmatched fast performance.</p>
                         </div>
                     </div>
                 </div>
-                <div class="row clearfix" style="margin-top: 100px;">
+                <div class="row clearfix" style="margin-top: 100px">
                     <div class="col_one_fourth nobottommargin center bounceIn animated" data-animate="bounceIn">
                         <i class="i-plain i-xlarge divcenter nobottommargin icon-code texto-verde"></i>
                         <div class="counter counter-lined">
@@ -465,7 +447,151 @@
                         </div>
                         <h5 class="t700">Hours of Coding</h5>
                     </div>
-                </div>   
+                </div>
+            </div>
+        </div>
+        <div class="section nomargin noborder bg-azul" id="promoBox2" style="padding: 60px 0 15px 0;">
+            <div class="container clearfix">
+                <div class="row s-normal">
+                    <div class="col-lg-3 mt-3">
+                        <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
+                            <i class="icon-line-arrow-right"></i>
+                            <span>Contáctanos</span>
+                        </a>
+                    </div>
+                    <div class="col-lg-9 center">
+                        <div class="heading-block">
+                            <h2 class="texto-blanco">Buscamos hacer realidad tus <b>sueños</b> por el mejor precio.</h2>
+                            <span class="texto-blanco">Obtener tu identidad nunca fue tan fácil.</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section nomargin noborder" id="heading-block-1" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
+            <div class="container clearfix">
+                <div class="heading-block center">
+                    <h2 class="texto-verde">Todos nuestros sitios webs <strong>incluyen</strong> para ti.</h2>
+                </div>
+                <div class="row my-5">
+                    <div class="col-lg-4">
+                        <div class="feature-box fbox-plain">
+                            <div class="fbox-icon">
+                                <i class="icon-pen-nib"></i>
+                            </div>
+                            <h3 class="texto-azul">Diseño a la Medida</h3>
+                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="feature-box fbox-plain">
+                            <div class="fbox-icon">
+                                <i class="icon-tablet1"></i>
+                            </div>
+                            <h3 class="texto-azul">Diseño Responsive</h3>
+                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="feature-box fbox-plain">
+                            <div class="fbox-icon">
+                                <i class="icon-users"></i>
+                            </div>
+                            <h3 class="texto-azul">Integración con las RRSS</h3>
+                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="feature-box fbox-plain">
+                            <div class="fbox-icon">
+                                <i class="icon-world"></i>
+                            </div>
+                            <h3 class="texto-azul">Posicionamiento Web Básico</h3>
+                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="feature-box fbox-plain">
+                            <div class="fbox-icon">
+                                <i class="icon-map-marker1"></i>
+                            </div>
+                            <h3 class="texto-azul">Google Maps</h3>
+                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="feature-box fbox-plain">
+                            <div class="fbox-icon">
+                                <i class="icon-images"></i>
+                            </div>
+                            <h3 class="texto-azul">Banco de Imágenes</h3>
+                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="line"></div>
+                <div class="heading-block center">
+                    <h2 class="texto-verde"><b>Clientes</b> que han confiado en nosotros.</h2>
+                </div>
+                <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
+                    <div class="oc-item">
+                        <div class="testimonial">
+                            <div class="testi-content">
+                                <p>Incidunt deleniti blanditiis quas aperiam recusandae consequatur ullam quibusdam cum libero illo rerum repellendus!</p>
+                                <div class="testi-meta">
+                                John Doe
+                                <span>XYZ Inc.</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="oc-item">
+                        <div class="testimonial">
+                            <div class="testi-content">
+                                <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
+                                <div class="testi-meta">
+                                Collis Ta'eed
+                                <span>Envato Inc.</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="oc-item">
+                        <div class="testimonial">
+                            <div class="testi-content">
+                                <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
+                                <div class="testi-meta">
+                                Collis Ta'eed
+                                <span>Envato Inc.</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="oc-item">
+                        <div class="testimonial">
+                            <div class="testi-content">
+                                <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
+                                <div class="testi-meta">
+                                Mary Jane
+                                <span>Google Inc.</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="oc-item">
+                        <div class="testimonial">
+                            <div class="testi-content">
+                                <p>Natus voluptatum enim quod necessitatibus quis expedita harum provident eos obcaecati id culpa corporis molestias.</p>
+                                <div class="testi-meta">
+                                Steve Jobs
+                                <span>Apple Inc.</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
