Diseño web casi listo

--- a/diseno-web.html
+++ b/diseno-web.html
@@ -532,8 +532,10 @@
                     </div>
                 </div>
                 <div class="line"></div>
-                <div class="heading-block center">
-                    <h2 class="texto-verde"><b>Clientes</b> que han confiado en nosotros.</h2>
+                <div id="testimonios">
+                    <div class="heading-block center">
+                        <h2 class="texto-verde"><b>Clientes</b> que han confiado en nosotros.</h2>
+                    </div>
                 </div>
                 <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
                     <div class="oc-item">
