--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/custom.css" type="text/css">
     <link rel="stylesheet" href="css/dark.css" type="text/css">
-    <link rel="stylesheet" href="css/app-landing.css" type="text/css">
-    <link rel="stylesheet" href="css/seo.css">
     <link rel="stylesheet" href="css/font-icons.css" type="text/css">
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/business.css">
     <link rel="stylesheet" href="css/swiper.css" type="text/css">
-    <link rel="stylesheet" href="css/coworking.css">
+    <link rel="stylesheet" href="css/sweetalert2.min.css">
     
     <link rel="stylesheet" href="css/responsive.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -664,98 +661,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div id="oc-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="20" data-nav="true" data-pagi="false" data-items-xs="1" data-items-sm="2" data-items-md="3" data-items-lg="4" data-loop="true"  data-autoplay="5000">
-                    <div class="oc-item">
-                        <div class="iportfolio">
-                            <div class="portfolio-image">
-                                <a href="portfolio-single.html">
-                                    <img src="images/portfolio/1.png" alt="Open Imagination">
-                                </a>
-                                <div class="portfolio-overlay">
-                                    <a target="_blank" href="http://www.serviplotca.com" class="center-icon">
-                                        <i class="texto-verde icon-line-plus"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="portfolio-desc">
-                                <h3><a class="texto-verde" target="_blank" href="http://www.serviplotca.com">Serviplotca</a></h3>
-                                <span>Sitio web</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="oc-item">
-                        <div class="iportfolio">
-                            <div class="portfolio-image">
-                                <a href="portfolio-single.html">
-                                    <img src="images/portfolio/2.png">
-                                </a>
-                                <div class="portfolio-overlay">
-                                    <a target="_blank" href="http://www.drycleaningontherun.com" class="center-icon">
-                                        <i class="texto-verde icon-line-plus"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="portfolio-desc">
-                                <h3><a class="texto-verde" target="_blank" href="http://www.drycleaningontherun.com">DryCleaning</a></h3>
-                                <span>Landing page</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="oc-item">
-                        <div class="iportfolio">
-                            <div class="portfolio-image">
-                                <a href="portfolio-single.html">
-                                    <img src="images/portfolio/3.png">
-                                </a>
-                                <div class="portfolio-overlay">
-                                    <a target="_blank" href="https://weare-yourfriends.com" class="center-icon">
-                                        <i class="texto-verde icon-line-plus"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="portfolio-desc">
-                                <h3><a class="texto-verde" target="_blank" href="https://weare-yourfriends.com">We Are Your Friends</a></h3>
-                                <span>eCommerce</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="oc-item">
-                        <div class="iportfolio">
-                            <div class="portfolio-image">
-                                <a href="portfolio-single.html">
-                                    <img src="images/portfolio/4.png">
-                                </a>
-                                <div class="portfolio-overlay">
-                                    <a target="_blank" href="http://petroleumblg.com" class="center-icon">
-                                        <i class="texto-verde icon-line-plus"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="portfolio-desc">
-                                <h3><a class="texto-verde" target="_blank" href="http://petroleumblg.com">Petroleum BLG</a></h3>
-                                <span>Sitio web</span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="oc-item">
-                        <div class="iportfolio">
-                            <div class="portfolio-image">
-                                <a href="portfolio-single.html">
-                                    <img src="images/portfolio/5.png">
-                                </a>
-                                <div class="portfolio-overlay">
-                                    <a target="_blank" href="http://jjcustomsolution.com" class="center-icon">
-                                        <i class="texto-verde icon-line-plus"></i>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="portfolio-desc">
-                                <h3><a class="texto-verde" target="_blank" href="http://jjcustomsolution.com">JJ Custom Solutions</a></h3>
-                                <span>Sitio web</span>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
         <div class="section nomargin noborder bg-verde" id="promoBox3" style="padding: 60px 0 15px 0;">
@@ -950,6 +855,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/functions.js"></script>
+    <script src="js/sweetalert2.min.js"></script>
     <script src="rs-plugin/js/jquery.themepunch.tools.min.js"></script>
     <script src="rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
     <script src="rs-plugin/js/revolution.addon.particles.min.js"></script>
