--- a/seo.html
+++ b/seo.html
@@ -6,18 +6,16 @@
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/custom.css" type="text/css">
     <link rel="stylesheet" href="css/dark.css" type="text/css">
-    <link rel="stylesheet" href="css/app-landing.css" type="text/css">
-    <link rel="stylesheet" href="css/seo.css">
     <link rel="stylesheet" href="css/font-icons.css" type="text/css">
     <link rel="stylesheet" href="css/fonts.css" type="text/css">
     <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/swiper.css" type="text/css">
-    
+    <link rel="stylesheet" href="css/sweetalert2.min.css">
+
     <link rel="stylesheet" href="css/responsive.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="css/colors.css" type="text/css">
-    <link rel="stylesheet" href="css/colors.php?color=24B35A" type="text/css"/>
+
     <link rel="stylesheet" href="rs-plugin/css/settings.css">
     <link rel="stylesheet" href="rs-plugin/css/layers.css">
     <link rel="stylesheet" href="rs-plugin/css/navigation.css">
@@ -706,6 +704,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/functions.js"></script>
+    <script src="js/sweetalert2.min.js"></script>
     <script src="rs-plugin/js/jquery.themepunch.tools.min.js"></script>
     <script src="rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
     <script src="rs-plugin/js/revolution.addon.particles.min.js"></script>
