--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
                             data-blendmode="hard-light"
-                            style="z-index: 5;font-family:Open Sans;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
+                            style="z-index: 5;font-family:Poppins;background:linear-gradient(90deg, rgba(41,112,255,0.75) 0%, rgba(46,216,163,0.75) 100%);"> 
                         </div>
                         <div class="tp-caption tp-resizeme" 
                             id="slide-1-layer-15" 
@@ -276,7 +276,7 @@
                             data-paddingright="[0,0,0,0]"
                             data-paddingbottom="[0,0,0,0]"
                             data-paddingleft="[0,0,0,0]"
-                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Open Sans;">
+                            style="z-index: 8; min-width: 640px; max-width: 640px; white-space: normal; font-size: 26px; line-height: 35px; font-weight: 300; color: #ffffff; letter-spacing: px;font-family:Poppins;">
                             Say Hello to the new web presence of your internet company. Usable, Customizable and Beautiful!
                         </div>
                         <div class="tp-caption rev-btn tc-btnshadow tp-rs-menulink btn-verde button button-3d button-reveal button-xlarge tright button-rounded" 
@@ -295,7 +295,7 @@
                             data-responsive="off"
                             data-frames='[{"delay":1000,"speed":1500,"frame":"0","from":"y:50px;opacity:0;","to":"o:1;","ease":"Power4.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"150","ease":"Power1.easeInOut","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgba(255,255,255,1);bg:rgb(41,194,146);"}]'
                             data-textAlign="['inherit','inherit','inherit','inherit']"
-                            style="z-index: 10; white-space: nowrap; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255,255,255,1); font-family:Open Sans;background-color:rgb(46,216,163);border-radius:3px 3px 3px 3px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">
+                            style="z-index: 10; white-space: nowrap; font-size: 17px; line-height: 50px; font-weight: 600; color: rgba(255,255,255,1); font-family:Poppins;background-color:rgb(46,216,163);border-radius:3px 3px 3px 3px;outline:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;text-decoration: none;">
                             <i class="icon-line-arrow-right"></i>
                             <span>Contáctanos</span>
                         </div>
@@ -322,7 +322,7 @@
                             data-paddingright="[5,5,5,5]"
                             data-paddingbottom="[5,5,5,5]"
                             data-paddingleft="[5,5,5,5]"
-                            style="z-index: 11; min-width: 50px; max-width: 50px; max-width: 50px; max-width: 50px; color: #ffffff;font-family:Open Sans;border-color:rgb(255,255,255);border-style:solid;border-width:2px 2px 2px 2px;border-radius:40px 40px 40px 40px;cursor:pointer;">
+                            style="z-index: 11; min-width: 50px; max-width: 50px; max-width: 50px; max-width: 50px; color: #ffffff;font-family:Poppins;border-color:rgb(255,255,255);border-style:solid;border-width:2px 2px 2px 2px;border-radius:40px 40px 40px 40px;cursor:pointer;">
                         </div>
                     </li>
                 </ul>
@@ -349,8 +349,8 @@
             <div class="container clearfix">
                 <div class="row clearfix">
                     <div class="col-lg-5">
-                        <div class="heading-block topmargin">
-                            <h2 class="texto-verde"><b>Encontrar tu</b> <strong>identidad Digital</strong>, nunca fue tan fácil.</h2>
+                        <div class="heading-block topmargin" style="margin-bottom: 0 !important;">
+                            <h2>Encontrar tu identidad Digital, nunca fue tan fácil.</h2>
                         </div>
                         <p class="lead">Create a website that you are gonna be proud of. Be it Business, Portfolio, Agency, Photography, eCommerce &amp; much more.</p>
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="nosotros.html">
@@ -358,14 +358,14 @@
                             <span>Nosotros</span>
                         </a>
                     </div>
-                    <div class="col-lg-7">
+                    <div class="col-lg-7 bottommargin">
                         <div style="position: relative; margin-bottom: -60px;" class="ohidden" data-height-xl="426" data-height-lg="567" data-height-md="470" data-height-md="287" data-height-xs="183">
                             <img src="images/main-fbrowser.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome">
                             <img src="images/main-fmobile.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="400" alt="iPad">
                         </div>
                     </div>
                 </div>
-                <div class="line"></div>
+                <div class="line topmargin-lg"></div>
                 <div class="row">
                     <div class="col-lg-3 col-sm-6">
                         <div class="feature-box fbox-center fbox-effect">
@@ -375,7 +375,7 @@
                                 </a>
                             </div>
                             <h3 class="texto-verde">Conocemos tu idea</h3>
-                            <p>Aprendemos a visualizar lo que quieres para tu negocio en el mundo digital.</p>
+                            <p class="lead" style="font-size: 18px !important;">Aprendemos a visualizar lo que quieres para tu negocio en el mundo digital.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
@@ -386,7 +386,7 @@
                                 </a>
                             </div>
                             <h3 class="texto-verde">Diseñamos</h3>
-                            <p>Transformamos tu idea en un diseño  unico para tu identidad web.</p>
+                            <p class="lead" style="font-size: 18px !important;">Transformamos tu idea en un diseño  unico para tu identidad web.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
@@ -397,7 +397,7 @@
                                 </a>
                             </div>
                             <h3 class="texto-verde">Desarrollamos</h3>
-                            <p>Contamos con una vasta experiencia en diseño de páginas web a su medida.</p>
+                            <p class="lead" style="font-size: 18px !important;">Contamos con una vasta experiencia en diseño de páginas web a su medida.</p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6">
@@ -408,7 +408,7 @@
                                 </a>
                             </div>
                             <h3 class="texto-verde">Entregamos identidad</h3>
-                            <p>Finalizamos todas tus ideas y las hacemos realidad al mejor precio.</p>
+                            <p class="lead" style="font-size: 18px !important;">Finalizamos todas tus ideas y las hacemos realidad al mejor precio.</p>
                         </div>
                     </div>
                 </div>
@@ -419,7 +419,7 @@
                 <div class="heading-block center">
                     <h2>
                         <div class="text-rotater texto-blanco" data-separator="|" data-rotate="flipInX" data-speed="2500">
-                            <strong>CreativosPlus</strong> es para tu negocio <b><span class="t-rotate">Identidad|Ganancia|Presencia</span></b>
+                            CreativosPlus es para tu negocio <span class="t-rotate">Identidad|Ganancia|Presencia</span>
                         </div>
                     </h2>
                 </div>
@@ -488,8 +488,8 @@
                 <div class="row">
                     <div class="col-lg-9">
                         <div class="heading-block center">
-							<h2 class="texto-blanco">Tener <strong>presencia</strong> en internet nunca fue tan necesario.</h2>
-							<span class="texto-blanco">La <strong>identidad</strong> de tu negocio te espera.</span>
+							<h2 class="texto-blanco">Tener presencia en internet nunca fue tan necesario.</h2>
+							<span class="texto-blanco t300">La identidad de tu negocio te espera.</span>
 						</div>
                     </div>
                     <div class="col-lg-3 mt-3">
@@ -504,7 +504,7 @@
         <div id="servicios" class="section nomargin boborder" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
                 <div class="heading-block center">
-                    <h2 class="texto-verde">Ofrecemos los mejores <strong>servicios web</strong> para ti.</h2>
+                    <h2>Ofrecemos los mejores servicios web para ti.</h2>
                 </div>
             </div>
             <div id="oc-features" class="owl-carousel owl-carousel-full image-carousel carousel-widget fixBoton">
@@ -572,7 +572,7 @@
         </div>  
         <div class="section nomargin noborder bg-azul" id="promoBox2" style="padding: 60px 0 15px 0;">
             <div class="container clearfix">
-                <div class="row s-normal">
+                <div class="row">
                     <div class="col-lg-3 mt-3">
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
@@ -581,8 +581,8 @@
                     </div>
                     <div class="col-lg-9 center">
                         <div class="heading-block">
-                            <h2 class="texto-blanco">Buscamos hacer realidad tus <b>sueños</b> por el mejor precio.</h2>
-                            <span class="texto-blanco">Obtener tu identidad nunca fue tan fácil.</span>
+                            <h2 class="texto-blanco">Hacemos tus realidad tus sueños por el mejor precio.</h2>
+                            <span class="texto-blanco t300">Obtener tu identidad nunca fue tan fácil.</span>
                         </div>
                     </div>
                 </div>
@@ -591,7 +591,7 @@
         <div id="trabajos" class="section nomargin noborder" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container-fluid">
                 <div class="heading-block center">
-                    <h2 class="texto-verde"><strong>Últimos trabajos web</strong>, conoce la calidad de ellos.</h2>
+                    <h2>Últimos trabajos web, conoce la calidad de ellos.</h2>
                 </div>
                 <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
                     <div class="slide slide--1">
@@ -637,10 +637,10 @@
         <div class="section nomargin noborder bg-verde" id="promoBox3" style="padding: 60px 0 15px 0;">
             <div class="container clearfix">
                 <div class="row">
-                    <div class="col-lg-8">
+                    <div class="col-lg-9">
                         <div class="heading-block center">
-                            <h2 class="texto-blanco">No esperes más  para obtener tu <strong>presencia en internet</strong>.</h2>
-                            <span class="texto-blanco">Tu negocio en manos de expertos.</span>
+                            <h2 class="texto-blanco">No esperes más  para obtener tu presencia en internet.</h2>
+                            <span class="texto-blanco t300">Tu negocio en manos de expertos.</span>
                         </div>
                     </div>
                     <div class="col-lg-3 mt-3">
@@ -655,7 +655,7 @@
         <div class="section nomargin noborder" id="testimonios" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
                 <div class="heading-block center">
-                    <h2 class="texto-verde"><b>Clientes</b> que han confiado en nosotros.</h2>
+                    <h2>Clientes que han confiado en nosotros.</h2>
                 </div>
                 <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
                     <div class="oc-item">
@@ -720,7 +720,7 @@
     <footer id="footer" class="bg-azul">
         <div class="container">
             <div class="footer-widgets-wrap clearfix">
-                <div class="heading-block">
+                <div class="heading-block center">
                     <h2 class="texto-blanco">Contacto</h2>
                 </div>
                 <form name="contac-form" id="contact-form" class="col-lg-12" method="post" action="">
