--- a/diseno-grafico.html
+++ b/diseno-grafico.html
@@ -549,7 +549,7 @@
     <footer id="footer" class="bg-azul">
         <div class="container">
             <div class="footer-widgets-wrap clearfix">
-                <div class="heading-block">
+                <div class="heading-block center">
                     <h2 class="texto-blanco">Contacto</h2>
                 </div>
                 <form name="contac-form" id="contact-form" class="col-lg-12" method="post" action="">
