--- a/diseno-web.html
+++ b/diseno-web.html
@@ -349,7 +349,7 @@
         <div class="section nomargin noborder" id="heading-block-1" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
                 <div class="heading-block center">
-                    <h2 class="texto-verde">Tenemos todo tipo de <strong>servicios</strong> para ti.</h2>
+                    <h2>Tenemos todo tipo de servicios para ti.</h2>
                 </div>
                 <div class="row">
                     <div class="col-lg-6">
@@ -358,7 +358,7 @@
                                 <i class="icon-desktop1 i-alt"></i>
                             </div>
                             <h3 class="texto-verde">Diseño Web</h3>
-                            <p>Powerful Layout with Responsive functionality that can be adapted to any screen size. Resize browser to view.</p>
+                            <p class="lead">Powerful Layout with Responsive functionality that can be adapted to any screen size. Resize browser to view.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -367,7 +367,7 @@
                                 <i class="icon-city i-alt"></i>
                             </div>
                             <h3 class="texto-verde">Diseño Web para Empresas</h3>
-                            <p>Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Retina Icons, Fonts &amp; all others graphics are optimized.</p>
+                            <p class="lead">Looks beautiful &amp; ultra-sharp on Retina Screen Displays. Retina Icons, Fonts &amp; all others graphics are optimized.</p>
                         </div>
                     </div>
                 </div>
@@ -378,7 +378,7 @@
                                 <i class="icon-shopping-cart i-alt"></i>
                             </div>
                             <h3 class="texto-verde">Tiendas Virtuales</h3>
-                            <p>Powerful Layout with Responsive functionality that can be adapted to any screen size. Resize browser to view.</p>
+                            <p class="lead">Powerful Layout with Responsive functionality that can be adapted to any screen size. Resize browser to view.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -387,7 +387,7 @@
                                 <i class="icon-pen-fancy i-alt"></i>
                             </div>
                             <h3 class="texto-verde">Rediseño Web</h3>
-                            <p>Canvas includes tons of optimized code that are completely customizable and deliver unmatched fast performance.</p>
+                            <p class="lead">Canvas includes tons of optimized code that are completely customizable and deliver unmatched fast performance.</p>
                         </div>
                     </div>
                 </div>
@@ -425,7 +425,7 @@
         </div>
         <div class="section nomargin noborder bg-azul" id="promoBox2" style="padding: 60px 0 15px 0;">
             <div class="container clearfix">
-                <div class="row s-normal">
+                <div class="row">
                     <div class="col-lg-3 mt-3">
                         <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
                             <i class="icon-line-arrow-right"></i>
@@ -434,8 +434,8 @@
                     </div>
                     <div class="col-lg-9 center">
                         <div class="heading-block">
-                            <h2 class="texto-blanco">Buscamos hacer realidad tus <b>sueños</b> por el mejor precio.</h2>
-                            <span class="texto-blanco">Obtener tu identidad nunca fue tan fácil.</span>
+                            <h2 class="texto-blanco">Hacemos realidad tus sueños por el mejor precio.</h2>
+                            <span class="texto-blanco t300">Obtener tu identidad nunca fue tan fácil.</span>
                         </div>
                     </div>
                 </div>
@@ -444,7 +444,7 @@
         <div class="section nomargin noborder" id="heading-block-1" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
             <div class="container clearfix">
                 <div class="heading-block center">
-                    <h2 class="texto-verde">Todos nuestros sitios webs <strong>incluyen</strong> para ti.</h2>
+                    <h2>Todos nuestros sitios webs incluyen para ti.</h2>
                 </div>
                 <div class="row my-5">
                     <div class="col-lg-4">
@@ -453,7 +453,7 @@
                                 <i class="icon-pen-nib"></i>
                             </div>
                             <h3 class="texto-azul">Diseño a la Medida</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                            <p class="lead">Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -462,7 +462,7 @@
                                 <i class="icon-tablet1"></i>
                             </div>
                             <h3 class="texto-azul">Diseño Responsive</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                            <p class="lead">Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -471,7 +471,7 @@
                                 <i class="icon-users"></i>
                             </div>
                             <h3 class="texto-azul">Integración con las RRSS</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                            <p class="lead">Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
                     </div>
                 </div>
@@ -482,7 +482,7 @@
                                 <i class="icon-world"></i>
                             </div>
                             <h3 class="texto-azul">Posicionamiento Web Básico</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                            <p class="lead">Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -491,7 +491,7 @@
                                 <i class="icon-map-marker1"></i>
                             </div>
                             <h3 class="texto-azul">Google Maps</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                            <p class="lead">Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -500,14 +500,14 @@
                                 <i class="icon-images"></i>
                             </div>
                             <h3 class="texto-azul">Banco de Imágenes</h3>
-                            <p>Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
+                            <p class="lead">Canvas provides support for Native HTML5 Videos that can be added to a Full Width Background.</p>
                         </div>
                     </div>
                 </div>
                 <div class="line"></div>
                 <div id="testimonios">
                     <div class="heading-block center">
-                        <h2 class="texto-verde"><b>Clientes</b> que han confiado en nosotros.</h2>
+                        <h2>Clientes que han confiado en nosotros.</h2>
                     </div>
                 </div>
                 <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
@@ -573,7 +573,7 @@
     <footer id="footer" class="bg-azul">
         <div class="container">
             <div class="footer-widgets-wrap clearfix">
-                <div class="heading-block">
+                <div class="heading-block center">
                     <h2 class="texto-blanco">Contacto</h2>
                 </div>
                 <form name="contac-form" id="contact-form" class="col-lg-12" method="post" action="">
