--- a/nosotros.html
+++ b/nosotros.html
@@ -350,8 +350,8 @@
          <div class="container clearfix">
             <div class="row clearfix">
                <div class="col-lg-5">
-                  <div class="heading-block topmargin">
-                     <h2 class="texto-verde">Conoce más de <strong>Nosotros</strong></h2>
+                  <div class="heading-block topmargin" style="margin-bottom: 0 !important;">
+                     <h2>Conoce más de Nosotros</h2>
                   </div>
                   <p class="lead">Create a website that you are gonna be proud of. Be it Business, Portfolio, Agency, Photography, eCommerce &amp; much more.</p>
                   <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
@@ -368,7 +368,7 @@
             </div>
             <div class="line"></div>
             <div class="heading-block center">
-               <h2 class="texto-verde">¿Por que <strong>elegirnos</strong>?</h2>
+               <h2>¿Por que elegirnos?</h2>
             </div>
             <div class="row">
                <div class="col-lg-3 col-sm-6">
@@ -379,7 +379,7 @@
                         </a>
                      </div>
                      <h3 class="texto-verde">Conocemos tu idea</h3>
-                     <p>Aprendemos a visualizar lo que quieres para tu negocio en el <strong>mundo digital</strong>.</p>
+                     <p class="lead" style="font-size: 18px !important;">Aprendemos a visualizar lo que quieres para tu negocio en el mundo digital.</p>
                   </div>
                </div>
                <div class="col-lg-3 col-sm-6">
@@ -389,8 +389,8 @@
                            <i class="i-alt">2</i>
                         </a>
                      </div>
-                     <h3 class="texto-verde"><strong>Diseñamos</strong></h3>
-                     <p>Transformamos tu idea en un diseño  unico para tu <strong>identidad web</strong></p>
+                     <h3 class="texto-verde">Diseñamos</h3>
+                     <p class="lead" style="font-size: 18px !important;">Transformamos tu idea en un diseño  unico para tu identidad web</p>
                   </div>
                </div>
                <div class="col-lg-3 col-sm-6">
@@ -400,8 +400,8 @@
                            <i class="i-alt">3</i>
                         </a>
                      </div>
-                     <h3 class="texto-verde"><strong>Desarrollamos</strong></h3>
-                     <p>Contamos con una vasta experiencia en diseño de <strong>páginas web a su medida</strong>.</p>
+                     <h3 class="texto-verde">Desarrollamos</h3>
+                     <p class="lead" style="font-size: 18px !important;">Contamos con una vasta experiencia en diseño de páginas web a su medida.</p>
                   </div>
                </div>
                <div class="col-lg-3 col-sm-6">
@@ -411,8 +411,8 @@
                            <i class="i-alt">4</i>
                         </a>
                      </div>
-                     <h3 class="texto-verde">Entregamos <strong>identidad</strong></h3>
-                     <p>Finalizamos todas tus ideas y las hacemos realidad al mejor <strong>precio</strong>.</p>
+                     <h3 class="texto-verde">Entregamos identidad</h3>
+                     <p class="lead" style="font-size: 18px !important;">Finalizamos todas tus ideas y las hacemos realidad al mejor precio.</p>
                   </div>
                </div>
             </div>
@@ -425,8 +425,8 @@
                   </div>
                </div>
                <div class="col-lg-5">
-                  <div class="heading-block topmargin">
-                        <h2 class="texto-verde">Nuestra <strong>Misión</strong></h2>
+                  <div class="heading-block topmargin" style="margin-bottom: 0 !important;">
+                        <h2>Nuestra Misión</h2>
                   </div>
                   <p class="lead">Create a website that you are gonna be proud of. Be it Business, Portfolio, Agency, Photography, eCommerce &amp; much more.</p>
                   <a class="btn-verde button button-3d button-reveal button-xlarge tright button-rounded" href="" data-scrollto="#footer" data-offset="160" data-easing="easeInOutExpo" data-speed="1200">
@@ -440,7 +440,7 @@
       <div class="section noborder nomargin" id="testimonios" style="background: url('images/3.jpg') no-repeat top center; background-size: cover; padding: 80px 0 70px;">
          <div class="container">
             <div class="heading-block center">
-               <h2 class="texto-verde"><b>Clientes</b> que han confiado en nosotros.</h2>
+               <h2>Clientes que han confiado en nosotros.</h2>
             </div>
             <div id="oc-testi" class="owl-carousel testimonials-carousel carousel-widget clearfix" data-margin="0" data-pagi="true" data-loop="true" data-center="true" data-autoplay="5000" data-items-sm="1" data-items-md="2" data-items-xl="3">
                <div class="oc-item">
@@ -501,7 +501,7 @@
             </div>
             <div class="line"></div>
             <div class="heading-block center">
-               <h2 class="texto-verde">¿Tienes dudas? mira las <strong>Preguntas Frecuentes</strong></h2>
+               <h2>¿Tienes dudas? mira las Preguntas Frecuentes</h2>
             </div>
             <div class="clear"></div>
             <div id="faqs" class="faqs topmargin">
@@ -513,47 +513,15 @@
                            <i class="toggle-open icon-question-sign texto-verde"></i>
                            <span class="texto-azul">¿Cuanto tiempo tardan las páginas web en realizarse?
                         </div>
-                        <div class="togglec">Esto depende del proyecto y del tiempo de respuesta del cliente. </div>
+                        <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
                      </div>
                      <div class="toggle faq">
                         <div class="togglet texto-azul">
                            <i class="toggle-closed icon-comments-alt texto-verde"></i>
                            <i class="toggle-open icon-comments-alt texto-verde"></i>
-                           Helpful Resources for Authors
+                           ¿Cuanto tiempo tardan las páginas web en realizarse?
                         </div>
-                        <div class="togglec">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
-                     </div>
-                     <div class="toggle">
-                        <div class="togglet texto-azul">
-                           <i class="toggle-closed icon-lock3 texto-verde"></i>
-                           <i class="toggle-open icon-lock3 texto-verde"></i>
-                           How much money can I make?
-                        </div>
-                        <div class="togglec">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
-                     </div>
-                     <div class="toggle faq">
-                        <div class="togglet texto-azul">
-                           <i class="toggle-closed icon-download-alt texto-verde"></i>
-                           <i class="toggle-open icon-download-alt texto-verde"></i>
-                           Can I offer my items for free on a promotional basis?
-                        </div>
-                        <div class="togglec">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
-                     </div>
-                     <div class="toggle faq">
-                        <div class="togglet texto-azul">
-                           <i class="toggle-closed icon-ok texto-verde"></i>
-                           <i class="toggle-open icon-ok texto-verde"></i>
-                           An Introduction to the Marketplaces for Authors
-                        </div>
-                        <div class="togglec">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
-                     </div>
-                     <div class="toggle faq">
-                        <div class="togglet texto-azul">
-                           <i class="toggle-closed icon-money texto-verde"></i>
-                           <i class="toggle-open icon-money texto-verde"></i>
-                           How does the Tuts+ Premium affiliate program work?
-                        </div>
-                        <div class="togglec">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
+                        <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
                      </div>
                   </div>
                   <div class="col-lg-6">
@@ -561,49 +529,17 @@
                         <div class="togglet texto-azul">
                            <i class="toggle-closed icon-picture texto-verde"></i>
                            <i class="toggle-open icon-picture texto-verde"></i>
-                           What Images, Videos, Code or Music Can I Use in my Items?
+                           ¿Cuanto tiempo tardan las páginas web en realizarse?
                         </div>
-                        <div class="togglec">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
-                     </div>
-                     <div class="toggle faq">
-                        <div class="togglet texto-azul">
-                           <i class="toggle-closed icon-file3 texto-verde"></i>
-                           <i class="toggle-open icon-file3 texto-verde"></i>
-                           Can I use trademarked names in my items?
-                        </div>
-                        <div class="togglec">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
-                     </div>
-                     <div class="toggle faq">
-                        <div class="togglet texto-azul">
-                           <i class="toggle-closed icon-bar-chart texto-verde"></i>
-                           <i class="toggle-open icon-bar-chart texto-verde"></i>
-                           Tips for Increasing Your Referral Income
-                        </div>
-                        <div class="togglec">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
-                     </div>
-                     <div class="toggle faq">
-                        <div class="togglet texto-azul">
-                           <i class="toggle-closed icon-phone3 texto-verde"></i>
-                           <i class="toggle-open icon-phone3 texto-verde"></i>
-                           How can I get support for an item which isn't working correctly?
-                        </div>
-                        <div class="togglec">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
-                     </div>
-                     <div class="toggle faq">
-                        <div class="togglet texto-azul">
-                           <i class="toggle-closed icon-credit texto-verde"></i>
-                           <i class="toggle-open icon-credit texto-verde"></i>
-                           How do I pay for items on the Marketplaces?
-                        </div>
-                        <div class="togglec">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
+                        <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
                      </div>
                      <div class="toggle faq">
                         <div class="togglet texto-azul">
                            <i class="toggle-closed icon-smile1 texto-verde"></i>
                            <i class="toggle-open icon-credit texto-verde"></i>
-                           How do I pay for items on the Marketplaces?
+                           ¿Cuanto tiempo tardan las páginas web en realizarse?
                         </div>
-                        <div class="togglec">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
+                        <div class="togglec" style="font-size: 16px !important; font-weight: 300;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
                      </div>
                   </div>
                </div>
@@ -614,7 +550,7 @@
    <footer id="footer" class="bg-azul">
         <div class="container">
             <div class="footer-widgets-wrap clearfix">
-                <div class="heading-block">
+                <div class="heading-block center">
                     <h2 class="texto-blanco">Contacto</h2>
                 </div>
                 <form name="contac-form" id="contact-form" class="col-lg-12" method="post" action="">
