--- a/servicios.html
+++ b/servicios.html
@@ -349,7 +349,7 @@
             <div id="section-nextgen" class="page-section bottommargin-lg topmargin">
                 <div class="row clearfix">
                     <div class="col-lg-7 center">
-                        <img src="images/iphone-watch.png" alt="NextGen Framework" data-animate="fadeInLeft" class="fadeInLeft animated">
+                        <img src="images/iphone-watch.png" alt="NextGen Framework" data-animate="fadeInLeft">
                     </div>
                     <div class="col-lg-5">
                         <div class="topmargin-lg d-none d-lg-block"></div>
@@ -382,7 +382,7 @@
                         </a>
                     </div>
                     <div class="col-lg-7 center">
-                        <img src="images/iphone-nexus.png" alt="Stunning Graphics" data-animate="fadeInRight" class="fadeInRight animated">
+                        <img src="images/iphone-nexus.png" alt="Stunning Graphics" data-animate="fadeInRight">
                     </div>
                 </div>
             </div>
