--- a/index.html
+++ b/index.html
@@ -360,8 +360,9 @@
                     </div>
                     <div class="col-lg-7 bottommargin">
                         <div style="position: relative; margin-bottom: -60px;" class="ohidden" data-height-xl="426" data-height-lg="567" data-height-md="470" data-height-md="287" data-height-xs="183">
-                            <img src="images/main-fbrowser.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome">
-                            <img src="images/main-fmobile.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="400" alt="iPad">
+                            <img src="images/HOME.jpg" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="CreativosPlus">
+                            <!-- <img src="images/main-fbrowser.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="100" alt="Chrome"> -->
+                            <!-- <img src="images/main-fmobile.png" style="position: absolute; top: 0; left: 0;" data-animate="fadeInUp" data-delay="400" alt="iPad"> -->
                         </div>
                     </div>
                 </div>
@@ -511,7 +512,7 @@
                 <div class="oc-item">
                     <div class="row cleafix">
                         <div class="col-lg-8">
-                            <img src="images/servicios/1.jpg" alt="">
+                            <img src="images/servicios/WEB.jpg" alt="">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Diseño Web Profesional</h3>
@@ -526,7 +527,7 @@
                 <div class="oc-item">
                     <div class="row cleafix">
                         <div class="col-lg-8">
-                            <img src="images/servicios/2.jpg" alt="">
+                            <img src="images/servicios/DISEÑO GRAFICO.jpg" alt="">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Diseño Gráfico Profesional</h3>
@@ -541,7 +542,7 @@
                 <div class="oc-item">
                     <div class="row cleafix">
                         <div class="col-lg-8">
-                            <img src="images/servicios/3.jpg" alt="">
+                            <img src="images/servicios/MARKETING.jpg" alt="">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>Marketing Digital</h3>
@@ -556,7 +557,7 @@
                 <div class="oc-item">
                     <div class="row cleafix">
                         <div class="col-lg-8">
-                            <img src="images/servicios/2.jpg" alt="">
+                            <img src="images/servicios/SEO.jpg" alt="">
                         </div>
                         <div class="col-lg-4" style="padding: 20px 0 0 20px;">
                             <h3>SEO</h3>
@@ -598,10 +599,10 @@
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a href="" class="item" style="background-image: url('images/gallery/1.jpg');"></a>
+                                    <a target="_blank" href="http://jjcustomsolution.com/" class="item" style="background-image: url('images/gallery/jjsolutions.jpg');"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a href="" class="item" style="background-image: url('images/gallery/2.jpg');"></a>
+                                    <a target="_blank" href="http://addictivebeautynow.com/" class="item" style="background-image: url('images/gallery/addictivebeautyspa.jpg');"></a>
                                 </li>
                             </ul>
                             <ul class="carousel-column column-2">
@@ -614,7 +615,10 @@
                                     </div>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a href="" class="item" style="background-image: url('images/gallery/5.jpg'); min-height: 380px"></a>
+                                    <a target="_blank" href="http://www.serviplotca.com/" class="item" style="background-image: url('images/gallery/serviplotca.jpg'); min-height: 300px"></a>
+                                </li>
+                                <li class="carousel-grid-item">
+                                    <a target="_blank" href="https://weare-yourfriends.com/" class="item" style="background-image: url('images/gallery/wayf.jpg'); min-height: 380px"></a>
                                 </li>
                             </ul>
                         </div>
@@ -623,10 +627,10 @@
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a href="" class="item" style="background-image: url('images/gallery/3.jpg'); min-height: 300px"></a>
+                                    <a target="_blank" href="http://petroleumblg.com/" class="item" style="background-image: url('images/gallery/blg.jpg'); min-height: 500px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a href="" class="item" style="background-image: url('images/gallery/4.jpg'); min-height: 280px"></a>
+                                    <a target="_blank" href="http://www.drycleaningontherun.com/" class="item" style="background-image: url('images/gallery/drycleaning.jpg'); min-height: 405px"></a>
                                 </li>
                             </ul>
                         </div>
