--- a/trabajos.html
+++ b/trabajos.html
@@ -349,17 +349,17 @@
         <div id="trabajos" class="section nomargin noborder">
             <div class="container-fluid">
                 <div class="heading-block center">
-                    <h2 class="texto-verde"><strong>Últimos trabajos web</strong>, conoce la calidad de ellos.</h2>
+                    <h2>Últimos trabajos web, conoce la calidad de ellos.</h2>
                 </div>
                 <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
                     <div class="slide slide--1">
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a href="" class="item" style="background-image: url('images/gallery/1.jpg');"></a>
+                                    <a target="_blank" href="http://jjcustomsolution.com/" class="item" style="background-image: url('images/gallery/jjsolutions.jpg');"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a href="" class="item" style="background-image: url('images/gallery/2.jpg');"></a>
+                                    <a target="_blank" href="http://addictivebeautynow.com/" class="item" style="background-image: url('images/gallery/addictivebeautyspa.jpg');"></a>
                                 </li>
                             </ul>
                             <ul class="carousel-column column-2">
@@ -372,7 +372,10 @@
                                     </div>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a href="" class="item" style="background-image: url('images/gallery/5.jpg'); min-height: 380px"></a>
+                                    <a target="_blank" href="http://www.serviplotca.com/" class="item" style="background-image: url('images/gallery/serviplotca.jpg'); min-height: 300px"></a>
+                                </li>
+                                <li class="carousel-grid-item">
+                                    <a target="_blank" href="https://weare-yourfriends.com/" class="item" style="background-image: url('images/gallery/wayf.jpg'); min-height: 380px"></a>
                                 </li>
                             </ul>
                         </div>
@@ -381,10 +384,10 @@
                         <div class="carousel-column-container">
                             <ul class="carousel-column column-1">
                                 <li class="carousel-grid-item">
-                                    <a href="" class="item" style="background-image: url('images/gallery/3.jpg'); min-height: 300px"></a>
+                                    <a target="_blank" href="http://petroleumblg.com/" class="item" style="background-image: url('images/gallery/blg.jpg'); min-height: 500px"></a>
                                 </li>
                                 <li class="carousel-grid-item">
-                                    <a href="" class="item" style="background-image: url('images/gallery/4.jpg'); min-height: 280px"></a>
+                                    <a target="_blank" href="http://www.drycleaningontherun.com/" class="item" style="background-image: url('images/gallery/drycleaning.jpg'); min-height: 405px"></a>
                                 </li>
                             </ul>
                         </div>
@@ -403,8 +406,8 @@
                     </div>
                     <div class="col-lg-9 center">
                         <div class="heading-block">
-                            <h2 class="texto-blanco">Buscamos hacer realidad tus <b>sueños</b> por el mejor precio.</h2>
-                            <span class="texto-blanco">Obtener tu identidad nunca fue tan fácil.</span>
+                            <h2 class="texto-blanco">Hacemos realidad tus sueños por el mejor precio.</h2>
+                            <span class="texto-blanco t300">Obtener tu identidad nunca fue tan fácil.</span>
                         </div>
                     </div>
                 </div>
@@ -413,7 +416,7 @@
         <div id="trabajos" class="section nomargin noborder">
             <div class="container-fluid">
                 <div class="heading-block center">
-                    <h2 class="texto-verde"><strong>Últimos diseños realizados</strong>, conoce la calidad de ellos.</h2>
+                    <h2>Últimos diseños realizados, conoce la calidad de ellos.</h2>
                 </div>
                 <div id="image-carousel" class="owl-carousel carousel-widget" data-margin="24" data-nav="true" data-pagi="true" data-items-xs="1" data-items-sm="1" data-items-md="1" data-items-lg="2" data-items-xl="2" style="padding: 0 20px" data-lightbox="gallery">
                     <div class="slide slide--1">
